--- a/checkout.html
+++ b/checkout.html
@@ -28,6 +28,8 @@
         <link href='http://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+
 
     </head>
 
@@ -54,7 +56,7 @@
   <div class="checkout-header">     	
 			<div class="container">
 				<div class="back-shopping">
-				<img src="assets/img/imgres.png" style="float:left;">
+				<img class="animated slideInLeft" src="assets/img/imgres.png" style="float:left;">
 					<h5>Forget Something? Click here and get back there to get it!<i class="fa fa-hand-o-down fa-1x hand"></i></div></h5>
 					<h2><a class="men-main" href="men_main.html">Mens Gear</a></h2>
 					<h2><a class="women-main" href="#">Ladies Wear</a></h2>
@@ -77,10 +79,10 @@
 
 		<div class="container container-sale">
 			<ul class="sale-items"><h5>Cruiser gear on sale ~ Throw it in the bag, Quick!!</h5>
-				<li>Item 1<button>Add To Cart</button></li>
-				<li>Item 2<button>Add To Cart</button></li>
-				<li>Item 3<button>Add To Cart</button></li>
-				<li>Item 4<button>Add To Cart</button></li>
+				<li>Item 1<button class="btn">Add To Cart</button></li>
+				<li>Item 2<button class="btn">Add To Cart</button></li>
+				<li>Item 3<button class="btn">Add To Cart</button></li>
+				<li>Item 4<button class="btn">Add To Cart</button></li>
 			</ul>
 		</div>
 
@@ -107,7 +109,7 @@
 				<td class="size">M</td>
 				<td class="cost">$40</td>
 				<td class="total">$40</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 			<tr>	
 				<td class="image"><img src="assets/img/thumbnail2.png"></td>
@@ -116,7 +118,7 @@
 				<td class="size">M</td>
 				<td class="cost">$35</td>
 				<td class="total">$70</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -126,7 +128,7 @@
 				<td class="size">XL</td>
 				<td class="cost">$40</td>
 				<td class="total">$40</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -136,7 +138,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -146,7 +148,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -156,7 +158,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -166,7 +168,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -176,7 +178,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -186,7 +188,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -196,7 +198,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 			<tr>	
@@ -206,7 +208,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 			
 			<tr>	
@@ -216,7 +218,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 			
 			<tr>	
@@ -226,7 +228,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger"> Remove</button></td>
 			</tr>
 			
 			<tr>	
@@ -236,7 +238,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 			
 			<tr>	
@@ -246,7 +248,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 			
 			<tr>	
@@ -256,7 +258,7 @@
 				<td class="size">M</td>
 				<td class="cost">$XX.XX</td>
 				<td class="total">$XX.XX</td>
-				<td class="total"><button>Remove</button></td>
+				<td class="total"><button class="btn-danger">Remove</button></td>
 			</tr>
 
 		</tbody>
@@ -295,10 +297,10 @@
 
 		<div class="container container-also">
 			<ul class="also-bought"><h5>Cruisers also bought this gear! Easily add to your cart before you leave!</h5>
-				<li>Item 1<button>Add To Cart</button></li>
-				<li>Item 2<button>Add To Cart</button></li>
-				<li>Item 3<button>Add To Cart</button></li>
-				<li>Item 4<button>Add To Cart</button></li>
+				<li>Item 1<button class="btn">Add To Cart</button></li>
+				<li>Item 2<button class="btn">Add To Cart</button></li>
+				<li>Item 3<button class="btn">Add To Cart</button></li>
+				<li>Item 4<button class="btn">Add To Cart</button></li>
 			</ul>
 		</div>
 
