--- a/men_main.html
+++ b/men_main.html
@@ -28,6 +28,8 @@
         <link href='http://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+        
 
           <!-- CSS -->
 
@@ -122,7 +124,7 @@
                   </div>
                   <div class="product-meta">
                     <h6><a href="#">Spartan Graphic T</a></h6>
-                    <div class="product-price">$40</div>
+                    <div class="product-price">$40<br><button class="btn">Add To Cart</button></div>
                   </div>
                 </li>
               </ul>
@@ -136,7 +138,7 @@
                   </div>
                   <div class="product-meta">
                     <h6><a href="#">CaliForNia State Graphic T</a></h6>
-                    <div class="product-price">$35</div>
+                    <div class="product-price">$35<br><button class="btn">Add To Cart</button></div>
                     </div>
                   </div>
                 </li>
@@ -151,7 +153,7 @@
                   </div>
                   <div class="product-meta">
                     <h6><a href="#">day of dead graphic t</a></h6>
-                    <div class="product-price">$45</div>
+                    <div class="product-price">$45<br><button class="btn">Add To Cart</button></div>
                   </div>
                 </li>
               </ul>
@@ -180,172 +182,136 @@
         </div>
       </div>
 
-      <div class="col-sm-12">
+      <div class="col-sm-12 men_shirts">
         <div class="container-fluid row">
           <ul class="products">
             <li class="col-sm-3 ">
               <div class="product-img">
-                <img src="assets/img/VertCruiserwhtblk.jpg" >
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
+                <img src="assets/img/VertCruiserwhtblk.jpg">
               </div>
               <div class="product-desc">
                 <h4><a href="single-product.html">Vertical Cruiser T</a></h4>
-                <div class="product-price">$25</div> 
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div> 
               </div>
             </li>
             <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/IRSHrocker.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
                 <h4><a href="single-product.html">irish pride Cruiser Rocker T</a></h4>
-                <div class="product-price">$35</div>
+                <div class="product-price">$35<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
              <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/Lighthsewhtblu.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
                 <h4><a href="single-product.html">Blue hwy 1, Pigeon Pt Lighthouse T</a></h4>
-                <div class="product-price">$25</div>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
           </ul>
         </div>
       </div>
 
-      <div class="col-sm-12">
+        <div class="col-sm-12 men_shirts">
         <div class="container-fluid row">
           <ul class="products">
             <li class="col-sm-3 ">
               <div class="product-img">
-                <img src="assets/img/VertCruiserwhtblk.jpg" >
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
+                <img src="assets/img/VertCruiserwhtblk.jpg">
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Grey sweater with print</a></h4>
-                <div class="product-price">$25</div> 
+                <h4><a href="single-product.html">Vertical Cruiser T</a></h4>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div> 
               </div>
             </li>
             <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/IRSHrocker.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Flowing gradient cardigan</a></h4>
-                <div class="product-price">$25</div>
+                <h4><a href="single-product.html">irish pride Cruiser Rocker T</a></h4>
+                <div class="product-price">$35<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
              <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/Lighthsewhtblu.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Blue hwy 1 shirt </a></h4>
-                <div class="product-price">$450</div>
+                <h4><a href="single-product.html">Blue hwy 1, Pigeon Pt Lighthouse T</a></h4>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
           </ul>
         </div>
       </div>
 
-      <div class="col-sm-12">
+      <div class="col-sm-12 men_shirts">
         <div class="container-fluid row">
           <ul class="products">
             <li class="col-sm-3 ">
               <div class="product-img">
-                <img src="assets/img/VertCruiserwhtblk.jpg" >
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
+                <img src="assets/img/VertCruiserwhtblk.jpg">
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Grey sweater with print</a></h4>
-                <div class="product-price">$25</div> 
+                <h4><a href="single-product.html">Vertical Cruiser T</a></h4>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div> 
               </div>
             </li>
             <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/IRSHrocker.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Flowing gradient cardigan</a></h4>
-                <div class="product-price">$25</div>
+                <h4><a href="single-product.html">irish pride Cruiser Rocker T</a></h4>
+                <div class="product-price">$35<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
              <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/Lighthsewhtblu.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Blue hwy 1 shirt </a></h4>
-                <div class="product-price">$450</div>
+                <h4><a href="single-product.html">Blue hwy 1, Pigeon Pt Lighthouse T</a></h4>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
           </ul>
         </div>
       </div>
 
-      <div class="col-sm-12">
+      <div class="col-sm-12 men_shirts">
         <div class="container-fluid row">
           <ul class="products">
             <li class="col-sm-3 ">
               <div class="product-img">
-                <img src="assets/img/VertCruiserwhtblk.jpg" >
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
+                <img src="assets/img/VertCruiserwhtblk.jpg">
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Grey sweater with print</a></h4>
-                <div class="product-price">$25</div> 
+                <h4><a href="single-product.html">Vertical Cruiser T</a></h4>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div> 
               </div>
             </li>
             <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/IRSHrocker.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Flowing gradient cardigan</a></h4>
-                <div class="product-price">$25</div>
+                <h4><a href="single-product.html">irish pride Cruiser Rocker T</a></h4>
+                <div class="product-price">$35<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
              <li class="col-sm-3 col-sm-offset-1">
               <div class="product-img">
                 <img src="assets/img/Lighthsewhtblu.jpg" class="first-image">
-                <div class="overlay">
-                  <a href="#" class="button atb">Add To Cart</a>
-                </div>
               </div>
               <div class="product-desc">
-                <h4><a href="single-product.html">Blue hwy 1 shirt </a></h4>
-                <div class="product-price">$450</div>
+                <h4><a href="single-product.html">Blue hwy 1, Pigeon Pt Lighthouse T</a></h4>
+                <div class="product-price">$25<a href="#" class="btn atc">Add To Cart</a></div>
               </div>
             </li>
           </ul>
@@ -375,12 +341,12 @@
     <div class="footer-area-container">
       <div class="containe-fluidr">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-sm-6">
               <div class="footer-widget"> 
               <img class="footer-logo" src="assets/img/cruiser-logo.png" alt="cruiser-patch" style="height:100px;" "width:150px;" ><p class="info">Half Moon Bay<br> San Franscico Bay Area<br> California<br> United States of America</p>
              </div>
           </div>
-          <div class="social col-lg-3 col-lg-offest-5">
+          <div class="social col-sm-3 col-sm-offest-5">
               <h6>Be Social With The Cruiser Lifestyle</h6>
                 <a href="http://facebook.com/cruiserlifestyle"><span class="fa-stack fa-lg">
                         <i class="fa fa-facebook fa-stack-2x"></i></span></a>
