--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/jquery.smallipop.css">
+        <link rel="stylesheet" type="text/css" href="css/animate.css">
 
 
 
@@ -22,8 +24,9 @@
         <link href='http://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
-
+<!-- <h6></h6> -->
 
 
     </head>
@@ -33,7 +36,7 @@
           <div class="row">
               <div class="col-sm-12">
                 <div class="col-sm-7">
-                  <h6>Free Shipping & Returns on ALL orders</h6>
+                  <h6 id="toolTipText" data-toggle="tooltip" data-placement="bottom" title="Dont Worry! No S&H Fees For You!">Free Shipping & Returns on ALL orders</h6>
                 </div>
                 <div class="checkout col-sm-4 col-sm-offset-1">
                   <a href="checkout.html"> 
@@ -43,8 +46,8 @@
                   </a>
                 </div>
               </div>
-            </div>
-          </div>   
+          </div>
+        </div>   
 
         
           </div>  
@@ -60,7 +63,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="index.html">Cruiser Lifestyle Clothing Company</a>
+            <a class="animated zoomIn" id="navbar-brand" href="index.html">Cruiser Lifestyle Clothing Company</a>
         </div>
 
 
@@ -112,14 +115,16 @@
 
         <!-- CAROSEL -->
 
-            <div class="carosel">
-                <p>Carosel of Cruiser pics here</p>
-            </div>
+
+          <div class="cruiser-carousel">
+            <p>Insert cruiser Pics here</p>
+          </div>
 
 
 
             <!-- SOCIAL BANNER -->
               <div class="social-banner">
+                <span class="hashtag">#cruiserlifestyle</span>
                   <a href="http://facebook.com/cruiserlifestyle"><span class="fa-stack fa-lg">
                     <i class="fa fa-facebook fa-stack-2x"></i></span></a>
                     <a href="http://twitter.com/cruiserclothing"><span class="fa-stack fa-lg">
@@ -145,8 +150,6 @@
           </div>
 
 
-
-
       
       <!-- Footer -->
 
@@ -168,12 +171,25 @@
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="js/jquery.bootstrap-dropdown-hover.js"></script>
+        <script src="js/jquery.smallipop.js"></script>
+        <script src="js/jCarousel.Lite.js"></script>
 
 
 
           <script>
 
               $('.data-toggle').bootstrapDropdownHover();
+
+
+               $('#toolTipText').smallipop({
+                  cssAnimations: {
+                  enabled: true,
+                  show: 'animated bounceInDown',
+                  hide: 'animated hinge',
+                  theme: 'Orange theme',
+                  }
+              });
+
 
           </script>
 
