--- a/index.html
+++ b/index.html
@@ -117,8 +117,20 @@
 
 
           <div class="cruiser-carousel">
-            <p>Insert cruiser Pics here</p>
-          </div>
+              <div class="container">
+                  <div class="row">
+                    <div class="col-sm-12">
+                        <div class="col-sm-2"><img src="1.jpg"></div>
+                        <div class="col-sm-2"><img src="8.jpg"></div>
+                        <div class="col-sm-2"><img src="3.jpg"></div>
+                        <div class="col-sm-2"><img src="4.jpg"></div>
+                        <div class="col-sm-2"><img src="5.jpg"></div>
+                        <div class="col-sm-2"><img src="6.jpg"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
 
 
 
