--- a/checkout.html
+++ b/checkout.html
@@ -57,7 +57,7 @@
 			<div class="container">
 				<div class="back-shopping">
 				<img class="animated slideInLeft" src="assets/img/imgres.png" style="float:left;">
-					<h5>Forget Something? Click here and get back there to get it!<i class="fa fa-hand-o-down fa-1x hand"></i></div></h5>
+					<h5 class="#">Forget Something? Click here and get back there to get it!<i class="fa fa-hand-o-down fa-1x hand"></i></div></h5>
 					<h2><a class="men-main" href="men_main.html">Mens Gear</a></h2>
 					<h2><a class="women-main" href="#">Ladies Wear</a></h2>
 				</div>
@@ -78,12 +78,67 @@
 
 
 		<div class="container container-sale">
-			<ul class="sale-items"><h5>Cruiser gear on sale ~ Throw it in the bag, Quick!!</h5>
-				<li>Item 1<button class="btn">Add To Cart</button></li>
-				<li>Item 2<button class="btn">Add To Cart</button></li>
-				<li>Item 3<button class="btn">Add To Cart</button></li>
-				<li>Item 4<button class="btn">Add To Cart</button></li>
-			</ul>
+			<ul class="also-bought"><h5>Cruisers also bought this gear! Easily add to your cart before you leave!</h5>
+             <div class="col-sm-2 widget col-sm-offset-2">
+              	<h4 class="btline-title">Most Popular</h4>
+              	<ul class="s-product">
+	                <li>
+	                  <div class="product-thumb">
+	                    <a href="#"><img src="assets/img/thumbnail3.jpg"></a>
+	                  </div>
+	                  <div class="product-meta">
+	                    <h6><a href="#">Spartan Graphic T</a></h6>
+	                    <div class="product-price">$40<br><button class="btn">Add To Cart</button></div>
+	                  </div>
+	                </li>
+              	</ul>
+            </div><!-- 
+             -->
+             <div class="col-sm-2 widget">
+             		<h4 class="btline-title">Most Popular</h4>
+              	<ul class="s-product">
+                <li>
+                  <div class="product-thumb">
+                    <a href="#"><img src="assets/img/thumbnail2.png"></a>
+                  </div>
+                  <div class="product-meta">
+                    <h6><a href="#">CaliForNia State Graphic T</a></h6>
+                    <div class="product-price">$35<br><button class="btn">Add To Cart</button></div>
+                    </div>
+                </li>
+                </ul>
+              </div><!-- 
+             -->
+             <div class="col-sm-2 widget">
+              <h4 class="btline-title">Most Popular</h4>
+              <ul class="s-product">
+                <li>
+                  <div class="product-thumb">
+                    <a href="#"><img src="assets/img/thumbnail1.jpg"></a>
+                  </div>
+                  <div class="product-meta">
+                    <h6><a href="#">day of dead graphic t</a></h6>
+                    <div class="product-price">$45<br><button class="btn">Add To Cart</button></div>
+                  </div>
+                </li>
+              </ul>
+            </div><!-- 
+             -->
+             <div class="col-sm-2 widget">
+              <h4 class="btline-title">Most Popular</h4>
+              <ul class="s-product">
+                <li>
+                  <div class="product-thumb">
+                    <a href="#"><img src="assets/img/thumbnail1.jpg"></a>
+                  </div>
+                  <div class="product-meta">
+                    <h6><a href="#">day of dead graphic t</a></h6>
+                    <div class="product-price">$45<br><button class="btn">Add To Cart</button></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+       </ul>
 		</div>
 
 
@@ -273,36 +328,83 @@
 	    </tr>
   	</tfoot>
 </table>
+<br>
+<br>
+<br>
+<br>
 
 
-		<!-- 
-			<ul class="checkout-list-head">
-				<li>Description</li>
-				<li>Item Detail</li>
-				<li>Quantity</li>
-				<li>Total</li>
-			</ul>
-
-			 <ul class="checkout-total-bar">
-			 		<li>Total</li>
-			 		<li>S&H</li>
-			 		<li>OutTheDoor!</li>
-			 </ul>
-		</div>
- -->
+		
 
 
 		<!-- carosel  2  -->
-
+	<hr>
 
 		<div class="container container-also">
 			<ul class="also-bought"><h5>Cruisers also bought this gear! Easily add to your cart before you leave!</h5>
-				<li>Item 1<button class="btn">Add To Cart</button></li>
-				<li>Item 2<button class="btn">Add To Cart</button></li>
-				<li>Item 3<button class="btn">Add To Cart</button></li>
-				<li>Item 4<button class="btn">Add To Cart</button></li>
-			</ul>
+             <div class="col-sm-2 col-sm-offset-2">
+              	<h4 class="btline-title">Most Popular</h4>
+              	<ul class="s-product">
+	                <li>
+	                  <div class="product-thumb">
+	                    <a href="#"><img src="assets/img/thumbnail3.jpg"></a>
+	                  </div>
+	                  <div class="product-meta">
+	                    <h6><a href="#">Spartan Graphic T</a></h6>
+	                    <div class="product-price">$40<br><button class="btn">Add To Cart</button></div>
+	                  </div>
+	                </li>
+              	</ul>
+            </div><!-- 
+             -->
+             <div class="col-sm-2 widget">
+             		<h4 class="btline-title">Most Popular</h4>
+              	<ul class="s-product">
+                <li>
+                  <div class="product-thumb">
+                    <a href="#"><img src="assets/img/thumbnail2.png"></a>
+                  </div>
+                  <div class="product-meta">
+                    <h6><a href="#">CaliForNia State Graphic T</a></h6>
+                    <div class="product-price">$35<br><button class="btn">Add To Cart</button></div>
+                    </div>
+                </li>
+                </ul>
+              </div><!-- 
+             -->
+             <div class="col-sm-2 widget">
+              <h4 class="btline-title">Most Popular</h4>
+              <ul class="s-product">
+                <li>
+                  <div class="product-thumb">
+                    <a href="#"><img src="assets/img/thumbnail1.jpg"></a>
+                  </div>
+                  <div class="product-meta">
+                    <h6><a href="#">day of dead graphic t</a></h6>
+                    <div class="product-price">$45<br><button class="btn">Add To Cart</button></div>
+                  </div>
+                </li>
+              </ul>
+            </div><!-- 
+             -->
+             <div class="col-sm-2 widget">
+              <h4 class="btline-title">Most Popular</h4>
+              <ul class="s-product">
+                <li>
+                  <div class="product-thumb">
+                    <a href="#"><img src="assets/img/thumbnail1.jpg"></a>
+                  </div>
+                  <div class="product-meta">
+                    <h6><a href="#">day of dead graphic t</a></h6>
+                    <div class="product-price">$45<br><button class="btn">Add To Cart</button></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+       </ul>
 		</div>
+
+
 
 
 
@@ -311,12 +413,12 @@
 			<div class="footer-area-container">
 			  <div class="container">
 			    <div class="row">
-			      <div class="col-lg-6">
+			      <div class="col-sm-6">
 			        <div class="footer-widget"> 
 			          <img class="footer-logo" src="assets/img/cruiser-logo.png" alt="cruiser-patch" style="height:100px;" "width:150px;" ><p class="info">Half Moon Bay<br> San Franscico Bay Area<br> California<br> United States of America</p>
 			        </div>
 			      </div>
-			      <div class=" col-lg-3 col-lg-offest-5 social">
+			      <div class=" col-sm-3 col-sm-offest-5 social">
 			        	<h6>Be Social With The Cruiser Lifestyle</h6>
 			            	<a href="http://facebook.com/cruiserlifestyle">
 			            	<span class="fa-stack fa-lg"><i class="fa fa-facebook fa-stack-2x"></i></span></a>
